--- a/web/map.html
+++ b/web/map.html
@@ -22,7 +22,7 @@
         <button type="button" id="btnRestore">恢复上次线路</button>
       </div>
     </div>
-    <a href="index.html" target="_self">← 返回</a>
+    <a id="btnBackToConsole" href="index.html" target="_self">← 返回</a>
     <button type="button" id="btnStrategy" title="路线策略">策略</button>
     <span id="routeInfo" class="status"></span>
     <button type="button" id="btnCollapse" title="收起菜单">收起</button>
