优化设置视图逻辑，新增设置面板功能，增强用户交互体验

--- a/web/index.html
+++ b/web/index.html
@@ -167,6 +167,8 @@
       <div id="viewMap" class="app-view hidden">
         <iframe id="mapFrame" src="about:blank" class="w-full h-full border-0 block" title="路线地图"></iframe>
       </div>
+      <!-- 设置视图：同页切换，内容由 JS 从弹窗移入 -->
+      <div id="viewSettings" class="app-view hidden"></div>
     </main>
 
     <!-- 底部导航栏（App 风格） -->
