--- a/web/map.html
+++ b/web/map.html
@@ -51,7 +51,10 @@
   </div>
   <div id="allDonePanel" class="nav-panel" style="display: none;">
     <span class="all-done">✅ 全部送达</span>
-    <a href="index.html" target="_self" class="btn-nav" style="text-align:center;">返回控制台</a>
+    <div class="btns">
+      <a id="btnOpenNavAllDone" href="#" target="_blank" rel="noopener" class="btn-nav">打开导航</a>
+      <a href="index.html" target="_self" class="btn-nav" style="text-align:center;">返回控制台</a>
+    </div>
   </div>
 
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
