--- a/web/map.html
+++ b/web/map.html
@@ -53,7 +53,7 @@
     <span class="all-done">✅ 全部送达</span>
     <div class="btns">
       <a id="btnOpenNavAllDone" href="#" target="_blank" rel="noopener" class="btn-nav">打开导航</a>
-      <a href="index.html" target="_self" class="btn-nav" style="text-align:center;">返回控制台</a>
+      <a id="btnBackToConsoleFromAllDone" href="index.html" target="_self" class="btn-nav" style="text-align:center;">返回控制台</a>
     </div>
   </div>
 
