更新鉴权逻辑，优化用户登录体验，增强代码结构

--- a/web/index.html
+++ b/web/index.html
@@ -244,6 +244,7 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="index-config.js"></script>
   <script src="index-state.js"></script>
+  <script src="auth.js"></script>
   <script src="index-ui.js"></script>
   <!-- Realtime 推送：复用同一 Supabase 客户端，避免多实例警告 -->
   <script>
