--- a/web/setup.html
+++ b/web/setup.html
@@ -87,6 +87,7 @@
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script src="index-config.js"></script>
   <script src="index-state.js"></script>
+  <script src="auth.js"></script>
   <script src="setup.js"></script>
 </body>
 </html>
